# speechcut

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: Setup-SpeechcutService.ps1  install.ps1
src/: main.py
src/core/: audio_processor.py  sound_separator.py
src/manager/: process_tracker.py  scheduler.py  worker_manager.py
src/modules/audio_processing/: audio_processor.py
src/modules/models/silero_vad/: wrapper.py
src/modules/models/yamnet/: wrapper.py
src/modules/sound_separation/: sound_separator.py
src/speechcut/: __main__.py
src/speechcut/app/: manager.py  scheduler.py  worker.py
src/speechcut/audio/: processor.py
src/speechcut/config/: settings.py
src/speechcut/ml/classifier/: yamnet.py
src/speechcut/ml/classifier/models/yamnet_saved/: fingerprint.pb  saved_model.pb
src/speechcut/ml/vad/: silero.py
src/speechcut/pipelines/: speech_extractor.py
src/speechcut/utils/: editing_metadata.py  locking.py  logging_setup.py  subproc.py
src/workers/: worker_server.py
